--- a/public/css/landing-page-v2.css
+++ b/public/css/landing-page-v2.css
@@ -311,7 +311,7 @@ relacionada aquele elemento
     font-size: 4rem;
     font-family: 'MedievalSharp', cursive;
     font-weight:500;
-	margin: 0 25% 20rem 3%;
+	margin: 0 25% 15rem 3%;
 }
 
 #button{
